<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_margin="12dp"
    card_view:cardBackgroundColor="#E488969E"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:id="@+id/foto"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:src="@mipmap/vendedor1" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vendedora"
        android:textColor="@color/white"
        android:id="@+id/idp"
        android:layout_toEndOf="@+id/foto"
        android:layout_toRightOf="@+id/foto"
        android:layout_alignParentTop="true"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"

         />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:textColor="@color/white"
        android:id="@+id/nombrep"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/foto"
        android:layout_toRightOf="@+id/foto"
        android:layout_below="@+id/idp"
        android:fontFamily="@font/roboto_bold"
        />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ciudad"
            android:textColor="@color/white"
            android:id="@+id/ciudadp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/foto"
            android:layout_toRightOf="@+id/foto"
            android:layout_below="@+id/nombrep"
            android:fontFamily="@font/roboto_bold"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textColor="@color/white"
            android:id="@+id/celularp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/foto"
            android:layout_toRightOf="@+id/foto"
            android:layout_below="@+id/ciudadp"
            android:fontFamily="@font/roboto_bold"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>