<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

    <Button
        android:id="@+id/registro"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:background="@drawable/boton"
        android:backgroundTint="@color/purple_700"
        android:text="@string/boton1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.359"
        tools:ignore="TouchTargetSizeCheck" />

    <view
        android:id="@+id/view"
        class="androidx.viewpager.widget.ViewPager"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Theme.AutoShopSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/app"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Theme.AutoShopSplash"
        android:layout_width="288dp"
        android:layout_height="54dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/registro1"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.049" />

    <view
        android:id="@+id/view3"
        class="androidx.viewpager.widget.ViewPager"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/pie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="329dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bordes"
        android:drawableEnd="@drawable/nombre"
        android:fontFamily="@font/roboto_bold"
        android:hint="Nombre"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="329dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordes"
        android:drawableEnd="@drawable/nombre"
        android:fontFamily="@font/roboto_bold"
        android:hint="Apellidos"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/documento"
        android:layout_width="329dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordes"
        android:drawableEnd="@drawable/doc"
        android:fontFamily="@font/roboto_bold"
        android:hint="Numero de Documento"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidos" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="329dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordes"
        android:drawableEnd="@drawable/email"
        android:fontFamily="@font/roboto_bold"
        android:hint="Correo Electronico"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/documento" />

    <EditText
        android:id="@+id/direccion"
        android:layout_width="329dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordes"
        android:drawableEnd="@drawable/dir"
        android:fontFamily="@font/roboto_bold"
        android:hint="Direccion"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="329dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordes"
        android:drawableEnd="@drawable/telefono"
        android:fontFamily="@font/roboto_bold"
        android:hint="Telefono"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direccion" />

    <EditText
        android:id="@+id/password"
        android:layout_width="329dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bordes"
        android:drawableEnd="@drawable/pass"
        android:fontFamily="@font/roboto_bold"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefono" />


</androidx.constraintlayout.widget.ConstraintLayout>